Fixed table of contents

--- a/2023-10-12_labo/index.html
+++ b/2023-10-12_labo/index.html
@@ -32,21 +32,22 @@ ol li{
 					<h2>Table des matières</h2>
 					<div class="horizontal-bar"></div>
 					<ol>
-						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="1">1. Framing of Discussion</h3>
+						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="1">Introduction</h3>
+						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="1">1. Contexte de l'hyper-instrument</h3>
+						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="1">2. Construction d'un hyper-orgue</h3>
 							<ul id="single-spaced" class="fragment" data-fragment-index="2">
-								<h4 id="single-spaced" style="line-height:75%">1.1 Defining Contradiction</h4>
-								<h4 id="single-spaced" style="line-height:75%">1.2 Why care?<br/><br/></h4>
+								<h4 id="single-spaced" style="line-height:75%">2.1 Contexte</h4>
+								<h4 id="single-spaced" style="line-height:75%">2.2 Synthèse</h4>
+								<h4 id="single-spaced" style="line-height:75%">2.3 Traitement</h4>
+								<h4 id="single-spaced" style="line-height:75%">2.4 Bande fixe</h4>
 							</ul>
-						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="3">2. Projects</h3>
+						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="3">3. Mise en pratique : 10 Élégies</h3>
 							<ul id="single-spaced" class="fragment" data-fragment-index="4">
-								<h4 id="single-spaced" style="line-height:75%">2.1 Ad viger</h4>
-								<h4 id="single-spaced" style="line-height:75%">2.2 Enjoy ur Sunl3ss Endeavours</h4>
-								<h4 id="single-spaced" style="line-height:75%">2.3 I heard God laughing</h4>
-								<h4 id="single-spaced" style="line-height:75%">2.4 Prière(return)</h4>
-								<h4 id="single-spaced" style="line-height:75%">2.5 En vitrail<br/><br/></h4>
+								<h4 id="single-spaced" style="line-height:75%">3.1 Inspirations</h4>
+								<h4 id="single-spaced" style="line-height:75%">2.3 Limitations</h4>
 							</ul>
 						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="5">Conclusion</h3>
-						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="5">Bibliography</h3>
+						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="5">Bibliographie</h3>
 					</ol>
 					<div class="horizontal-bar"></div>
 				</section>
