Added mission statement page

--- a/2023-10-12_labo/index.html
+++ b/2023-10-12_labo/index.html
@@ -29,6 +29,18 @@ ol li{
 					<h6>Par Kjel Sidloski</h6>
 				</section>
 				<section>
+					<div class="container">
+						<div class="left-column">
+					    	<div class="horizontal-bar" style="width: 64%"></div>
+					    		<mission>Mission<br>du projet</mission>
+					    	<div class="horizontal-bar" style="width: 64%"></div>
+						</div>
+					<div class="right-column">
+					    <h3 style="margin: 50px 130px 0 5px;">Explorer l'intersection de la technologie moderne et ancienne, en interfaçant l'orgue à tuyaux avec la numérique, dans le but de tisser de nouvelles expressions artistiques et poétiques, ancrés dans l'histoire, avec une lentille vers l'avenir.</h3>
+					</div>
+				    </div>
+				</section>
+				<section>
 					<h2>Table des matières</h2>
 					<div class="horizontal-bar"></div>
 					<ol>
