Finished first section and final slide

--- a/2023-10-12_labo/index.html
+++ b/2023-10-12_labo/index.html
@@ -13,18 +13,18 @@
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="../plugin/highlight/monokai.css">
 		<style>
-ul li{
- font-size:30px;
-}
-ol li{
- font-size:30px;
-}
-</style>
+			ul li{
+			 font-size:30px;
+			}
+			ol li{
+			 font-size:30px;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background-image="../files/title.png">
+				<section data-background-image="title.png">
 					<h1>Perspectives<br>contemporaines sur<br>l'hyper orgue :<br>concevoir, jouer et<br>écrire pour un orgue à<br>tuyaux Casavant<br>Frères augmenté.</h1>
 					<h6>Par Kjel Sidloski</h6>
 				</section>
@@ -42,7 +42,7 @@ ol li{
 				</section>
 				<section>
 					<h2>Table des matières</h2>
-					<div class="horizontal-bar"></div>
+					<div class="bar"></div>
 					<ol>
 						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="1">Introduction</h3>
 						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="1">1. Contexte de l'hyper-instrument</h3>
@@ -61,13 +61,101 @@ ol li{
 						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="5">Conclusion</h3>
 						<h3 id="single-spaced" style="line-height:75%" class="fragment" data-fragment-index="5">Bibliographie</h3>
 					</ol>
-					<div class="horizontal-bar"></div>
+					<div class="bar"></div>
 				</section>
 
 				<section>
-					<h1>1. Framing of Discussion</h1>
+					<h2>Introduction</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3 class="fragment" data-fragment-index="1">Une fenêtre limitée</h3>
+					</ol>
+					<div class="bar" style="margin-top: 170px;"></div>
 				</section>
-				<section data-background-image="/Users/kjelsidloski/Documents/Reveal/reveal.js/La Contradiction Divine/1.svg">
+				<section style="text-align: center;">
+					<img class="r-stretch" data-src="cmap.jpg">
+				</section>
+				<section>
+					<h2>Introduction</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Une fenêtre limitée</h3>
+						<ul>
+							<li class="fragment" data-fragment-index="1">Hyper-instrument</li>
+							<li class="fragment" data-fragment-index="2">Hyper-orgue</li>
+						</ul>
+					</ol>
+					<div class="bar" style="margin-top: 100px;"></div>
+				</section>
+				<section>
+					<h2>1. Contexte de l'hyper-instrument</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Qu'est-ce qu'un hyper-instrument?</h3>
+						<ul>
+							<h4 class="fragment" data-fragment-index="1"><em>« Well, the basic idea of a hyperinstrument is where the technology is built right into the instrument so that the instrument knows how it's being played literally, what the expression is, what the meaning is, what the direction of the music is. » - Todd Machover, 2008.</em></h3>
+							<li class="fragment" data-fragment-index="2">Distingué de la luthérie numérique par l'utilisation des instruments acoustiques.</li>
+						</ul>
+					</ol>
+					<div class="bar" style="margin-top: 60px;"></div>
+				</section>
+				<section>
+					<h2>1. Contexte de l'hyper-instrument</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Tod Machover et le laboratoire de MIT - 1983</h3>
+						<ul>
+							<li class="fragment" data-fragment-index="1">Clavier et contrôleurs percussifs midi avec un module de synthé en Hyperlisp - 1989</li>
+							<li class="fragment" data-fragment-index="2">L'hyper-violoncelle de Yo-Yo Ma - 1991</li>
+						</ul>
+						<h3 class="fragment" data-fragment-index="3">L'hyper-shaku par Beilharz, Jakovich, et Ferguson – 2006</h3>
+						<h3 class="fragment" data-fragment-index="4">L'hyper-piano par Andrew McPherson - 2012</h3>
+					</ol>
+					<div class="bar" style="margin-top: 60px;"></div>
+				</section>
+				<section>
+					<h2>1. Contexte de l'hyper-instrument</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Hyper-orgue</h3>
+						<ul>
+							<li class="fragment" data-fragment-index="1">Orgelpark - 2011</li>
+						</ul>
+					</ol>
+					<div class="bar" style="margin-top: 100px;"></div>
+				</section>
+				<section style="text-align: center;">
+					<img class="r-stretch" data-src="orgelpark1.jpg">
+				</section>
+				<section style="text-align: center;">
+					<img class="r-stretch" data-src="orgelpark2.jpg">
+				</section>
+				<section>
+					<h2>1. Contexte de l'hyper-instrument</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Hyper-orgue</h3>
+						<ul>
+							<li>Orgelpark - 2011</li>
+							<li class="fragment" data-fragment-index="1">Lauren Redhead</li>
+						</ul>
+					</ol>
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
+					<h2>Merci!</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Si vous avez des questions :</h3>
+						<h3>net@kjel.ca</h3>
+					</ol>
+					<div class="bar" style="margin-top: 70px;"></div>
+					<div class="qrcode">
+						<h4 style="margin-bottom:0; margin-left:75%;">https://bit.ly/3Fbzn5c</h4>
+						<img style="margin-left:75%; width:19%; height:auto;" data-src="qrcode.png">
+					</div>
+				</section>
+				<section>
 					<h1>1.1 Defining Contradiction</h1>
 				</section>
 				<section data-background-iframe="https://en.wikipedia.org/wiki/Contradiction" data-background-interactive>
@@ -91,6 +179,7 @@ ol li{
 				</section>
 
 				<section>
+					<div class="header"><h5>Introduction</h5><h6>Test</h6></div>
 					<h1>2. Projects</h1>
 				</section>
 
