Added slides on context, and synthesis, and added hidden nav control

--- a/2023-10-12_labo/index.html
+++ b/2023-10-12_labo/index.html
@@ -19,6 +19,9 @@
 			ol li{
 			 font-size:30px;
 			}
+			.reveal .controls {
+			 color: #0c0c0c;
+			}
 		</style>
 	</head>
 	<body>
@@ -31,9 +34,9 @@
 				<section>
 					<div class="container">
 						<div class="left-column">
-					    	<div class="horizontal-bar" style="width: 64%"></div>
+					    	<div class="bar" style="width: 64%"></div>
 					    		<mission>Mission<br>du projet</mission>
-					    	<div class="horizontal-bar" style="width: 64%"></div>
+					    	<div class="bar" style="width: 64%"></div>
 						</div>
 					<div class="right-column">
 					    <h3 style="margin: 50px 130px 0 5px;">Explorer l'intersection de la technologie moderne et ancienne, en interfaçant l'orgue à tuyaux avec la numérique, dans le but de tisser de nouvelles expressions artistiques et poétiques, ancrés dans l'histoire, avec une lentille vers l'avenir.</h3>
@@ -100,7 +103,8 @@
 					<div class="bar" style="margin-top: 60px;"></div>
 				</section>
 				<section>
-					<h2>1. Contexte de l'hyper-instrument</h2>
+					<div class="header"><h5>1. Contexte de l'hyper-instrument</h5></div>
+					<h2>Historique</h2>
 					<div class="bar"></div>
 					<ol>
 						<h3>Tod Machover et le laboratoire de MIT - 1983</h3>
@@ -114,13 +118,11 @@
 					<div class="bar" style="margin-top: 60px;"></div>
 				</section>
 				<section>
-					<h2>1. Contexte de l'hyper-instrument</h2>
+					<div class="header"><h5>1. Contexte de l'hyper-instrument</h5></div>
+					<h2>Hyper-orgue</h2>
 					<div class="bar"></div>
 					<ol>
-						<h3>Hyper-orgue</h3>
-						<ul>
-							<li class="fragment" data-fragment-index="1">Orgelpark - 2011</li>
-						</ul>
+						<h3 li class="fragment" data-fragment-index="1">Orgelpark - 2011</h3>
 					</ol>
 					<div class="bar" style="margin-top: 100px;"></div>
 				</section>
@@ -131,7 +133,107 @@
 					<img class="r-stretch" data-src="orgelpark2.jpg">
 				</section>
 				<section>
-					<h2>1. Contexte de l'hyper-instrument</h2>
+					<div class="header"><h5>1. Contexte de l'hyper-instrument</h5></div>
+					<h2>Hyper-orgue</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Orgelpark - 2011</h3>
+						<h3 class="fragment" data-fragment-index="1">Lauren Redhead - 2014</h3>
+					</ol>
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
+					<h2>2. Construction d'un hyper-orgue</h2>
+					<div class="bar"></div>
+					<div class="bar" style="margin-top: 170px;"></div>
+				</section>
+				<section>
+					<div class="container" style="margin-top:0px">
+					<div class="left-column">
+					<div class="header"><h5>2. Construction d'un hyper-orgue</h5></div>
+					<h2>2.1 Contexte</h2>
+					<div style="width: 64%" class="bar"></div>
+					<ol>
+						<h3>Orgue de l'église Saint-Édouard</h3>
+						<ul>
+							<li class="fragment" data-fragment-index="0">Construit en 1913 par Casavant Frères</li>
+							<li class="fragment" data-fragment-index="0">Leur 534e œuvre</li>
+							<li class="fragment" data-fragment-index="0">Orgue symphonique</li>
+							<li class="fragment" data-fragment-index="0">Traction électropneumatique</li>
+							<li class="fragment" data-fragment-index="0">3 claviers</li>
+							<li class="fragment" data-fragment-index="0">53 rangs (Plus de 3000 tuyaux!)</li>
+						</ul>
+					</ol>
+					<div class="bar" style="margin-top: 0px; width: 64%"></div>
+					</div>
+					<div style="margin-top:50px;" class="right-column">
+						<img data-src="orgue.jpg">
+					</div>
+					</div>
+				</section>
+				<section>
+					<div class="header"><h5>2. Construction d'un hyper-orgue</h5></div>
+					<h2>Trois modalités</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Synthèse</h3>
+						<h3 class="fragment" data-fragment-index="1">Traitement</h3>
+						<h3 class="fragment" data-fragment-index="2">Bande fixe</h3>
+					</ol>
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
+					<div class="header"><h5>2. Construction d'un hyper-orgue</h5></div>
+					<h2>2.2 Synthèse</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Additive</h3>
+						<h3 class="fragment" data-fragment-index="1">Soustractif</h3>
+					</ol>
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
+					<div class="header"><h5>2. Construction d'un hyper-orgue</h5><h6>2.2. Synthèse</h6></div>
+					<h2>Additive</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3>Apte pour le composant harmonique</h3>
+						<h3 class="fragment" data-fragment-index="1">Pour simuler l'orgue à tuyaux</h3>
+						<ul>
+							<li class="fragment" data-fragment-index="2">Enveloppes indépendantes sur chaque harmonique</li>
+							<li class="fragment" data-fragment-index="2">Attaque et decay plus rapide pour les aigues</li>
+							<li class="fragment" data-fragment-index="2">Attaque et decay plus rapide pour les aigues</li>
+						</ul>
+					</ol>
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
+					<div class="header"><h5>2. Construction d'un hyper-orgue</h5><h6>2.2. Synthèse</h6></div>
+					<h2>Soustractif</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3 class="fragment" data-fragment-index="1">Apte pour le composant bruité</h3>
+					</ol>
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section data-background-iframe="https://en.wikipedia.org/wiki/Main_Page" data-background-interactive>
+				</section>
+				<section>
+					<div class="header"><h5>2. Construction d'un hyper-orgue</h5><h6>2.2. Synthèse</h6></div>
+					<h2>Débordant les limites</h2>
+					<div class="bar"></div>
+					<ol>
+						<h3 class="fragment" data-fragment-index="1">Pourquoi simuler l'orgue?</h3>
+						<ul>
+							<li class="fragment" data-fragment-index="2">Fréquences continues</li>
+							<audio class="fragment" data-fragment-index="2" data-autoplay="true" src="media1.mp3">
+							<li class="fragment" data-fragment-index="3">Attaque et decay plus rapide pour les aigues</li>
+							<li class="fragment" data-fragment-index="4">Attaque et decay plus rapide pour les aigues</li>
+						</ul>
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
+					<h2>3. Mise en pratique : 10 Élégies</h2>
 					<div class="bar"></div>
 					<ol>
 						<h3>Hyper-orgue</h3>
@@ -455,7 +557,8 @@
 				width: 960,
 				height: 500,
 				hash: true,
-				controls: false,
+				controls: true,
+				controlsBackArrows: 'hidden',
 				progress: false,
 				transition: 'none',
 				margin: 0,
