--- a/2024-01-19_TGN/index.html
+++ b/2024-01-19_TGN/index.html
@@ -172,7 +172,7 @@ Redhead, L., & Zaldua, A. (2016). The Organ as Live Interface.<br><br>
 					<div class="right-column">
 						<img data-src="orgue.jpg">
 					<div class="qrcode">
-						<h4 style="margin-top:0%; margin-left:55%;">https://bit.ly/3Fbzn5c</h4>
+						<h4 style="margin-top:0%; margin-left:55%;">http://bit.ly/48FvbHZ</h4>
 						<img style="margin-top:0%; margin-left:55%; width:30%; height:auto;" data-src="qrcode.png">
 					</div>
 					</div>
