Fixed media links

--- a/2024-07_ACTOR/index.html
+++ b/2024-07_ACTOR/index.html
@@ -548,10 +548,10 @@
 					<div class="bar" style="margin-top: 70px;"></div>
 					</div>
 					<div style="margin-top:50px;" class="right-column">
-						<img class="fragment" data-fragment-index="2" style="width:75%; height:auto; margin-top:-20px" data-src="poeme.png">
+						<img class="fragment" data-fragment-index="2" style="width:75%; height:auto; margin-top:-20px" data-src="..media/poeme.png">
 					</div>
 				</section>
-				<section><video data-autoplay="false" src="video.mp4"></section>
+				<section><video data-autoplay="false" src="../media/video.mp4"></section>
 				<section>
 					<h2>Conclusion</h2>
 					<div class="bar"></div>
