Fixed links and added qr code

--- a/2024-07_ACTOR/index.html
+++ b/2024-07_ACTOR/index.html
@@ -319,7 +319,7 @@
 				</section>
 				<section>
 					<div class="header"><h5>2. Construction of a hyper-organ</h5><h6>2.3 Synthesis</h6></div>
-					<h2>Soustractif</h2>
+					<h2>Subtractive</h2>
 					<div class="bar"></div>
 					<ol>
 						<h3 class="fragment" data-fragment-index="1">Good for the noise content</h3>
@@ -516,7 +516,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<li>Inharmonic sounds</li>
 							<li>Separation of harmonic and noise content</li>
@@ -599,15 +599,15 @@ Redhead, L., & Zaldua, A. (2016). The Organ as Live Interface.<br><br>
 						<h3>If you have any questions:</h3>
 						<h3>net@kjel.ca</h3>
 						<h3 style="margin-left=50px;">A special thanks to the OICRM for graciously supporting this project</h3>
-						<img style="margin-left=50px; width:25%; height:auto; margin-top:0px" data-src="oicrm.webp">
+						<img style="margin-left=50px; width:25%; height:auto; margin-top:0px" data-src="../media/oicrm.webp">
 					</ol>
 					<div class="bar" style="margin-top: 0px;"></div>
 					</div>
 					<div class="right-column">
-						<img data-src="orgue.jpg">
+						<img data-src="..media/orgue.jpg">
 					<div class="qrcode">
-						<h4 style="margin-top:0%; margin-left:55%;"></h4>
-						<img style="margin-top:0%; margin-left:55%; width:30%; height:auto;" data-src="">
+						<h4 style="margin-top:0%; margin-left:55%;">bit.ly/49E1Td5</h4>
+						<img style="margin-top:0%; margin-left:55%; width:30%; height:auto;" data-src="qrcode.png">
 					</div>
 					</div>
 					</div>
