Changed some spelling errors and fixed more links

--- a/2024-07_ACTOR/index.html
+++ b/2024-07_ACTOR/index.html
@@ -366,7 +366,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<audio data-autoplay src="../media/media1.mp3">
 						</ul>
 					</ol>
@@ -379,7 +379,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 						</ul>
 					</ol>
@@ -392,7 +392,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<audio data-autoplay src="../media/media2.mp3">
 						</ul>
@@ -406,7 +406,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<li>Inharmonic sounds</li>
 						</ul>
@@ -420,7 +420,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<li>Inharmonic sounds</li>
 							<audio data-autoplay src="../media/media3.mp3">
@@ -435,7 +435,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<li>Inharmonic sounds</li>
 							<li>Separation of harmonic and noise content</li>
@@ -450,7 +450,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<li>Inharmonic sounds</li>
 							<li>Separation of harmonic and noise content</li>
@@ -466,7 +466,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<li>Inharmonic sounds</li>
 							<li>Separation of harmonic and noise content</li>
@@ -482,7 +482,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<li>Inharmonic sounds</li>
 							<li>Separation of harmonic and noise content</li>
@@ -499,7 +499,7 @@
 					<ol>
 						<h3>Why simulate the organ?</h3>
 						<ul>
-							<li>Continous frequencies (glissandi)</li>
+							<li>Continuous frequencies (glissandi)</li>
 							<li>Interpolation</li>
 							<li>Inharmonic sounds</li>
 							<li>Separation of harmonic and noise content</li>
@@ -548,7 +548,7 @@
 					<div class="bar" style="margin-top: 70px;"></div>
 					</div>
 					<div style="margin-top:50px;" class="right-column">
-						<img class="fragment" data-fragment-index="2" style="width:75%; height:auto; margin-top:-20px" data-src="..media/poeme.png">
+						<img class="fragment" data-fragment-index="2" style="width:75%; height:auto; margin-top:-20px" data-src="../media/poeme.png">
 					</div>
 				</section>
 				<section><video data-autoplay="false" src="../media/video.mp4"></section>
@@ -604,7 +604,7 @@ Redhead, L., & Zaldua, A. (2016). The Organ as Live Interface.<br><br>
 					<div class="bar" style="margin-top: 0px;"></div>
 					</div>
 					<div class="right-column">
-						<img data-src="..media/orgue.jpg">
+						<img data-src="../media/orgue.jpg">
 					<div class="qrcode">
 						<h4 style="margin-top:0%; margin-left:55%;">bit.ly/49E1Td5</h4>
 						<img style="margin-top:0%; margin-left:55%; width:30%; height:auto;" data-src="qrcode.png">
