Added slides on synthesis and OrganLab

--- a/2024-07_ACTOR/index.html
+++ b/2024-07_ACTOR/index.html
@@ -338,14 +338,46 @@
 					<div class="bar" style="margin-top: 70px;"></div>
 				</section>
 				<section>
+					<div class="header"><h5>2. Construction of a hyper-organ</h5><h6>2.3 Analysis (a composer's approach)</h6></div>
+					<h2>Bourdon</h2>
+					<div class="bar"></div>
+						<img class="r-stretch" style="margin-left:90px;" data-src="../media/bourdon.png">
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
+					<div class="header"><h5>2. Construction of a hyper-organ</h5><h6>2.3 Analysis (a composer's approach)</h6></div>
+					<h2>Principal</h2>
+					<div class="bar"></div>
+						<img class="r-stretch" style="margin-left:90px;" data-src="../media/principal.png">
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
+					<div class="header"><h5>2. Construction of a hyper-organ</h5><h6>2.3 Analysis (a composer's approach)</h6></div>
+					<h2>Voix humaine</h2>
+					<div class="bar"></div>
+						<img class="r-stretch" style="margin-left:90px;" data-src="../media/voix_humaine.png">
+					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section>
 					<div class="header"><h5>2. Construction of a hyper-organ</h5><h6>2.4 Synthesis</h6></div>
 					<h2>OrganLab</h2>
 					<div class="bar"></div>
 					<ol>
-						<h3 class="fragment" data-fragment-index="1">Pyo</h3>
-						<a href="https://github.com/enh3/organ-lab" class="fragment" data-fragment-index="2">https://github.com/enh3/organ-lab</a>
+						<h3 class="fragment" data-fragment-index="1">Synthesis engine using Pyo library</h3>
+						<h3 class="fragment" data-fragment-index="2">Emulation using additive and subtractive synthesis</h3>
+						<h3 class="fragment" data-fragment-index="3">Independant control of each partial</h3>
+						<h3 class="fragment" data-fragment-index="4">Mutation using function calls and FM synthesis</h3>
+						<h3 class="fragment" data-fragment-index="5">Driven with a midi controller</h3>
+						<h3 class="fragment" data-fragment-index="6">Open source</h3>
+						<ul>
+							<li class="fragment" data-fragment-index="6"><a href="https://github.com/enh3/organ-lab" class="fragment" data-fragment-index="5">https://github.com/enh3/organ-lab</a></li>
+						</ul>
 					</ol>
 					<div class="bar" style="margin-top: 70px;"></div>
+				</section>
+				<section data-background-image="../media/github.png"></section>
+				<section style="text-align: center;">
+					<img class="r-stretch" data-src="../media/image31.jpg">
 				</section>
 				<section>
 					<div class="header"><h5>2. Construction of a hyper-organ</h5><h6>2.4 Synthesis</h6></div>
@@ -354,7 +386,7 @@
 					<ol>
 						<h3 class="fragment" data-fragment-index="1">Why simulate the organ?</h3>
 						<ul>
-							<li class="fragment" data-fragment-index="2">Continuous frequences (glissandi)</li>
+							<li class="fragment" data-fragment-index="2">Continuous frequencies (glissandi)</li>
 						</ul>
 					</ol>
 					<div class="bar" style="margin-top: 160px;"></div>
@@ -604,9 +636,8 @@ Redhead, L., & Zaldua, A. (2016). The Organ as Live Interface.<br><br>
 					<div class="bar" style="margin-top: 0px;"></div>
 					</div>
 					<div class="right-column">
-						<img data-src="../media/orgue.jpg">
 					<div class="qrcode">
-						<h4 style="margin-top:0%; margin-left:55%;">bit.ly/49E1Td5</h4>
+						<h4 style="margin-top:65%; margin-left:55%;">bit.ly/49E1Td5</h4>
 						<img style="margin-top:0%; margin-left:55%; width:30%; height:auto;" data-src="qrcode.png">
 					</div>
 					</div>
