Changed bitly link

--- a/2024-04-02_MUS1321/index.html
+++ b/2024-04-02_MUS1321/index.html
@@ -218,7 +218,7 @@ Redhead, L., & Zaldua, A. (2016). The Organ as Live Interface.<br><br>
 					<div class="right-column">
 						<img data-src="../media/orgue.jpg">
 					<div class="qrcode">
-						<h4 style="margin-top:0%; margin-left:55%;">http://bit.ly/48FvbHZ</h4>
+						<h4 style="margin-top:0%; margin-left:55%;">http://bit.ly/43K6Hf8</h4>
 						<img style="margin-top:0%; margin-left:55%; width:30%; height:auto;" data-src="qrcode.png">
 					</div>
 					</div>
