--- a/2024-04-02_MUS1321/index.html
+++ b/2024-04-02_MUS1321/index.html
@@ -76,9 +76,9 @@
 					<ol>
 						<h3 class="fragment" data-fragment-index="1">1. Synthèse</h3>
 						<h3 class="fragment" data-fragment-index="2">2. Traitement en temps réel</h3>
-						<h3 class="fragment" data-fragment-index="3" style="margin-bottom:200px;">3. Acousmatique</h3>
+						<h3 class="fragment" data-fragment-index="3">3. Acousmatique</h3>
 					</ol>
-					<div class="bar" style="margin-top: 0px; width: 64%"></div>
+					<div class="bar" style="margin-top: 100px; width: 64%"></div>
 					</div>
 					</div>
 				</section>
@@ -93,7 +93,7 @@
 						<h3 class="fragment" data-fragment-index="2">Soustractive</h3>
 						<h3 class="fragment" data-fragment-index="3">Modélisation physique</h3>
 					</ol>
-					<div class="bar" style="margin-top: 0px; width: 64%"></div>
+					<div class="bar" style="margin-top: 100px; width: 64%"></div>
 					</div>
 					</div>
 				</section>
@@ -141,7 +141,7 @@
 						<h3 id="single-spaced" class="fragment" data-fragment-index="2">La petite sœur de Pianoteq</h3>
 						<h3 id="single-spaced" class="fragment" data-fragment-index="3">L'un des instruments le plus immense en 30MB</h3>
 					</ol>
-					<div class="bar" style="margin-top: 0px; width: 64%"></div>
+					<div class="bar" style="margin-top: 100px; width: 64%"></div>
 					</div>
 					</div>
 				</section>
@@ -166,7 +166,7 @@
 						<h3 id="single-spaced" class="fragment" data-fragment-index="2">Techniques expérimentales</h3>
 						<h3 id="single-spaced" class="fragment" data-fragment-index="3">(Sur)pression d'air</h3>
 					</ol>
-					<div class="bar" style="margin-top: 0px; width: 64%"></div>
+					<div class="bar" style="margin-top: 100px; width: 64%"></div>
 					</div>
 					</div>
 				</section>
