Fixed last slide image for safari

--- a/2024-05-28_COBS/index.html
+++ b/2024-05-28_COBS/index.html
@@ -352,7 +352,7 @@ Redhead, L., & Zaldua, A. (2016). The Organ as Live Interface.<br><br>
 					<div class="bar" style="margin-top: 0px;"></div>
 					</div>
 					<div class="right-column" style="text-align:right; margin-right:50px">
-						<img style="display:inline-block; width:auto; height:45%;" data-src="../media/2024-04-28_MH3_sat0.png">
+						<img style="display:inline-block; width:auto; width: 85%; max-height: 145vh; object-fit: contain;" data-src="../media/2024-04-28_MH3_sat0.png">
 					<div class="qrcode">
 						<h4 style="margin-top:0%; margin-left:55%;">bit.ly/4ayuRuS</h4>
 						<img style="margin-top:0%; margin-left:55%; width:30%; height:auto;" data-src="qrcode.png">
