Removed a couple slides and added logos

--- a/2024-05-28_COBS/index.html
+++ b/2024-05-28_COBS/index.html
@@ -32,35 +32,6 @@
 					<h6>by Kjel Sidloski</h6>
 				</section>
 				<section>
-					<div class="container" style="margin-top:0px">
-					<div class="left-column">
-					<h2>Tables of contents</h2>
-					<div class="bar"></div>
-					<ol>
-						<h3 id="single-spaced" class="tight">Introduction</h3>
-						<h3 id="single-spaced" class="tight">1. Hyper-instrument context</h3>
-						<h3 id="single-spaced" class="tight">2. Constructing a hyper-organ</h3>
-							<ul>
-								<li id="single-spaced" style="list-style-type: none;">2.1 The pipe organ of l'église Saint-Édouard</li>
-								<li id="single-spaced" style="list-style-type: none;">2.2 Posture and approach</li>
-								<li id="single-spaced" style="list-style-type: none;">2.3 OrganLab</li>
-							</ul>
-						<h3 id="single-spaced" class="tight">4. Creative application : Élégies</h3>
-							<ul id="single-spaced">
-								<li id="single-spaced" style="list-style-type: none;">3.1 Inspirations</li>
-								<li id="single-spaced" style="list-style-type: none;">3.2 Poetic framework</li>
-							</ul>
-						<h3 id="single-spaced" class="tight">Conclusion</h3>
-						<h3 id="single-spaced" class="tight">Bibliography</h3>
-					</ol>
-					<div class="bar" style="margin-top: 10px;"></div>
-                                        </div>
-				</section>
-				<section style="text-align: center;">
-					<div class="header" style="text-align: left;"><h5>Introduction</h5></div>
-					<img class="r-stretch" data-src="../media/IMG_3414_copy.jpg">
-				</section>
-				<section>
 					<div class="header"><h5>Introduction</h5></div>
 					<div class="container">
 						<div class="left-column">
@@ -86,22 +57,8 @@
 									<li class="fragment" data-fragment-index="3">Interface/Input</li>
 									<li class="fragment" data-fragment-index="3">Treatment/Output</li>
 								</ul>
+								<li class="fragment" data-fragment-index="4">Term "hyper-instrument" coined in the late 80s by Tod Machover</li>
 						</ul>
-					</ol>
-					<div class="bar" style="margin-top: 60px;"></div>
-				</section>
-				<section>
-					<div class="header"><h5>1. Hyper-instrument context</h5></div>
-					<h2>History</h2>
-					<div class="bar"></div>
-					<ol>
-						<h3 class="tight">Tod Machover and the MIT laboratory - 1983</h3>
-						<ul>
-							<li>Keyboard and midi percussion controllers with a Hyperlisp synth module - 1989</li>
-							<li>Yo-Yo Ma's hyper-cello - 1991</li>
-						</ul>
-						<h3 class="fragment" data-fragment-index="1">The hyper-shaku by Beilharz, Jakovich, et Ferguson – 2006</h3>
-						<h3 class="fragment" data-fragment-index="1">The hyper-piano by Andrew McPherson - 2012</h3>
 					</ol>
 					<div class="bar" style="margin-top: 60px;"></div>
 				</section>
@@ -138,7 +95,7 @@
 					<div style="width: 64%" class="bar"></div>
 					<ol>
 						<h3 class="fragment" data-fragment-index="1">Augmentation and not ameliorisation</h4>
-						<h3 class="fragment" data-fragment-index="2">Optimising one aspect of an instrument always deemphasizes others</h4>
+						<h3 class="fragment" data-fragment-index="2">Optimising one aspect of an instrument always de-emphasizes others</h4>
 						<h3 class="fragment" data-fragment-index="3">The choice of approach depends on the selected instrument and the performer or composer's intentions</h4>
 					</ol>
 					<div class="bar" style="margin-top: 100px; width: 64%"></div>
@@ -184,10 +141,9 @@
 					<div style="width: 64%" class="bar"></div>
 					<ol>
 						<h3 class="fragment" data-fragment-index="1">Should integrate with the pipe organ's soundworld</h3>
-						<h3 class="fragment" data-fragment-index="2">Should extend this soundworld using the limitations of the original instrument as an inspiration</h3>
+						<h3 class="fragment" data-fragment-index="2">Should extend this soundworld</h3>
 						<h3 class="fragment" data-fragment-index="3">Should use both convergent and divergent mappings</h3>
-						<h3 class="fragment" data-fragment-index="4">Should facilitate the navigation of the continuum of acoustic and synthetic timbral profiles</h3>
-						<h3 class="fragment" data-fragment-index="5" style="margin-bottom:40px;"></h3>
+						<h3 class="fragment" data-fragment-index="4">Should facilitate the navigation of the continuum of acoustic<br>and synthetic timbral profiles</h3>
 					</ol>
 					<div class="bar" style="margin-top: 0px; width: 64%"></div>
 					</div>
@@ -247,7 +203,7 @@
 				<section data-background-image="../media/github.png"></section>
 				<section style="text-align: center;">
 					<div class="header" style="text-align: left;"><h5>2. Construction of a hyper-organ</h5></div>
-					<img class="r-stretch" data-src="../media/image31.jpg">
+					<img class="r-stretch" data-src="../media/IMG_3414_copy.jpg">
 				</section>
 				<section style="text-align: center;">
 					<div class="header" style="text-align: left;"><h5>2. Construction of a hyper-organ</h5></div>
@@ -347,9 +303,14 @@ Redhead, L., & Zaldua, A. (2016). The Organ as Live Interface.<br><br>
 						<h3>If you have any questions:</h3>
 						<h3>net@kjel.ca</h3>
 						<h3 style="margin-left=50px;">A special thanks to the OICRM for graciously supporting this project</h3>
-						<img style="margin-left=50px; width:25%; height:auto; margin-top:0px" data-src="../media/oicrm.webp">
 					</ol>
-					<div class="bar" style="margin-top: 0px;"></div>
+					<div class="bar" style="margin-top: 20px; margin-bottom: 190px;"></div>
+					<div class="logos">
+						<img style="width:30%; height:auto; margin-top:0px" data-src="../media/logo1.png">
+						<img style="margin-left:-20px; width:30%; height:auto; margin-top:0px" data-src="../media/logo2.png">
+						<img style="margin-top:0px; width:22.5%; height:auto; margin-top:0px" data-src="../media/logo3.jpg">
+						<img style="margin-top:90px; width:22.5%; height:auto; margin-top:0px" data-src="../media/logo4.png">
+					</div>
 					</div>
 					<div class="right-column" style="text-align:right; margin-right:50px">
 						<img style="display:inline-block; width:auto; width: 85%; max-height: 145vh; object-fit: contain;" data-src="../media/2024-04-28_MH3_sat0.png">
