Added new videos and changed title

--- a/2024-07_ACTOR/index.html
+++ b/2024-07_ACTOR/index.html
@@ -28,7 +28,8 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-background-image="../media/title.png">
-					<h1>Revisiting the original<br> synthesizer: spectral<br> analysis and synthesis of<br> a Casavant Frères pipe organ<br> for creative application<br> in an augmented<br> instrument context</h1>
+					<h1>Revisiting<br>the original<br>synthesizer: a<br>composer-performer<br>perspective on<br>pipe organ<br>augmentation</h1>
+					<!--<h1>Revisiting the original<br> synthesizer: spectral<br> analysis and synthesis of<br> a Casavant Frères pipe organ<br> for creative application<br> in an augmented<br> instrument context</h1>--!>
 					<h6>by Kjel Sidloski</h6>
 				</section>
 				<section>
@@ -246,8 +247,8 @@
 					<h2>3.1 Inspiration</h2>
 					<div class="bar" style="width: 64%"></div>
 					<ol>
-						<h3 class="fragment" data-fragment-index="1">Études d'hyper-orgue</h3>
-						<h3 class="fragment" data-fragment-index="2">10 élégies de duino de Rainer Maria Rilke</h3>
+						<h3 class="fragment" data-fragment-index="1">Hyper-organ etudes</h3>
+						<h3 class="fragment" data-fragment-index="2">10 Duino Elegies of Rainer Maria Rilke</h3>
 					</ol>
 					<div class="bar" style="margin-top: 100px; width: 64%"></div>
 					</div>
@@ -276,7 +277,8 @@
 					</div>
 					</div>
 				</section>
-				<section><video data-autoplay="false" src="../media/video.mp4"></section>
+				<section><video data-autoplay="false" src="../media/2024-07-14_synthesis.mp4"></section>
+				<section><video data-autoplay="false" src="../media/2024-07-14_effects.mp4"></section>
 				<section>
 					<div class="container" style="margin-top:0px">
 					<div class="left-column">
