--- a/2024-07_ACTOR/index.html
+++ b/2024-07_ACTOR/index.html
@@ -278,7 +278,7 @@
 					</div>
 				</section>
 				<section><video data-autoplay="false" src="../media/2024-07-14_synthesis.mp4"></section>
-				<section><video data-autoplay="false" src="../media/2024-07-14_effects.mp4"></section>
+				<section><video data-autoplay="false" src="../media/video.mp4"></section>
 				<section>
 					<div class="container" style="margin-top:0px">
 					<div class="left-column">
