Re-added new videos

--- a/2024-07_ACTOR/index.html
+++ b/2024-07_ACTOR/index.html
@@ -277,7 +277,8 @@
 					</div>
 					</div>
 				</section>
-				<section><video data-autoplay="false" src="../media/video.mp4"></section>
+				<section><video data-autoplay="false" src="../media/2024-07-14_synthesis.mp4"></section>
+				<section><video data-autoplay="false" src="../media/2024-07-14_effects.mp4"></section>
 				<section>
 					<div class="container" style="margin-top:0px">
 					<div class="left-column">
@@ -342,7 +343,7 @@ Redhead, L., & Zaldua, A. (2016). The Organ as Live Interface.<br><br>
 					<div class="right-column" style="text-align:right; margin-right:50px">
 						<img style="display:inline-block; width:auto; width: 85%; max-height: 145vh; object-fit: contain;" data-src="../media/2024-04-28_MH3_sat0.png">
 					<div class="qrcode">
-						<h4 style="margin-top:0%; margin-left:55%;">bit.ly/4ayuRuS</h4>
+						<h4 style="margin-top:0%; margin-left:55%;">bit.ly/462lJhi</h4>
 						<img style="margin-top:0%; margin-left:55%; width:30%; height:auto;" data-src="qrcode.png">
 					</div>
 					</div>
